[gd_scene load_steps=56 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/FemaleZombie.tscn" type="PackedScene" id=2]
[ext_resource path="res://script/Game.gd" type="Script" id=3]
[ext_resource path="res://audio/coin_sound.wav" type="AudioStream" id=4]
[ext_resource path="res://audio/heart_sound.wav" type="AudioStream" id=5]
[ext_resource path="res://audio/hurt_sound.wav" type="AudioStream" id=6]
[ext_resource path="res://audio/HurtZombieSound.wav" type="AudioStream" id=7]
[ext_resource path="res://tileset/Objects/Crate.png" type="Texture" id=8]
[ext_resource path="res://tileset/Objects/DeadBush.png" type="Texture" id=9]
[ext_resource path="res://tileset/Objects/blood.png" type="Texture" id=10]
[ext_resource path="res://tileset/Objects/TombStone (2).png" type="Texture" id=11]
[ext_resource path="res://tileset/Objects/Skeleton.png" type="Texture" id=12]
[ext_resource path="res://tileset/Objects/TombStone (1).png" type="Texture" id=13]
[ext_resource path="res://tileset/Tiles/Bone (2).png" type="Texture" id=14]
[ext_resource path="res://audio/background_sound.mp3" type="AudioStream" id=15]
[ext_resource path="res://tileset/Tiles/Tile (4).png" type="Texture" id=47]
[ext_resource path="res://tileset/Tiles/Tile (1).png" type="Texture" id=48]
[ext_resource path="res://tileset/Tiles/Tile (6).png" type="Texture" id=49]
[ext_resource path="res://tileset/Tiles/Tile (3).png" type="Texture" id=50]
[ext_resource path="res://tileset/Tiles/Tile (7).png" type="Texture" id=51]
[ext_resource path="res://tileset/Tiles/Tile (16).png" type="Texture" id=52]
[ext_resource path="res://tileset/Tiles/Tile (5).png" type="Texture" id=53]
[ext_resource path="res://tileset/Tiles/Tile (9).png" type="Texture" id=54]
[ext_resource path="res://tileset/Tiles/Tile (2).png" type="Texture" id=55]
[ext_resource path="res://tileset/Objects/Bush (1).png" type="Texture" id=56]
[ext_resource path="res://tileset/Tiles/Tile (12).png" type="Texture" id=57]
[ext_resource path="res://tileset/Tiles/Tile (11).png" type="Texture" id=58]
[ext_resource path="res://tileset/Tiles/Tile (10).png" type="Texture" id=59]
[ext_resource path="res://tileset/Tiles/Bone (4).png" type="Texture" id=60]
[ext_resource path="res://tileset/Tiles/Tile (15).png" type="Texture" id=61]
[ext_resource path="res://tileset/Objects/Bush (2).png" type="Texture" id=62]
[ext_resource path="res://tileset/Tiles/Bone (1).png" type="Texture" id=63]
[ext_resource path="res://tileset/BG/BG.png" type="Texture" id=64]
[ext_resource path="res://tileset/Tiles/Tile (14).png" type="Texture" id=65]
[ext_resource path="res://tileset/Objects/ArrowSign.png" type="Texture" id=66]
[ext_resource path="res://tileset/Tiles/Tile (13).png" type="Texture" id=67]
[ext_resource path="res://tileset/Tiles/Tile (8).png" type="Texture" id=68]
[ext_resource path="res://scenes/Coin.tscn" type="PackedScene" id=69]
[ext_resource path="res://scenes/Heart.tscn" type="PackedScene" id=70]
[ext_resource path="res://tileset/Coins/single_coin.png" type="Texture" id=71]
[ext_resource path="res://fonts/m04b.TTF" type="DynamicFontData" id=72]
[ext_resource path="res://tileset/Hearts/single_heart.png" type="Texture" id=73]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 128, 32, 0, 32, 0, 0, 128, 0 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 128, 32, 0, 32, 0, 0, 128, 0 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 128, 32, 0, 32, 0, 0, 128, 0 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 128, 128, 0, 128, 0, 0, 128, 0 )

[sub_resource type="TileSet" id=9]
1/name = "Tile (2).png 1"
1/texture = ExtResource( 55 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 128, 128 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 1 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "Tile (14).png 2"
2/texture = ExtResource( 65 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 128, 96 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 6 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
5/name = "Tile (3).png 5"
5/texture = ExtResource( 50 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 128, 128 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 7 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "Tile (4).png 6"
6/texture = ExtResource( 47 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 128, 128 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "Tile (5).png 7"
7/texture = ExtResource( 53 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 0, 128, 128 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "Tile (6).png 8"
8/texture = ExtResource( 49 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 0, 128, 128 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "Tile (1).png 9"
9/texture = ExtResource( 48 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 0, 0, 128, 128 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape = SubResource( 8 )
9/shape_one_way = false
9/shape_one_way_margin = 1.0
9/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
9/z_index = 0
10/name = "Tile (7).png 10"
10/texture = ExtResource( 51 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 0, 0, 128, 128 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape = SubResource( 2 )
10/shape_one_way = false
10/shape_one_way_margin = 1.0
10/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
10/z_index = 0
11/name = "Tile (8).png 11"
11/texture = ExtResource( 68 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 0, 0, 128, 128 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape_one_way = false
11/shape_one_way_margin = 0.0
11/shapes = [  ]
11/z_index = 0
12/name = "Tile (9).png 12"
12/texture = ExtResource( 54 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 0, 0, 128, 128 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape_one_way = false
12/shape_one_way_margin = 0.0
12/shapes = [  ]
12/z_index = 0
13/name = "Tile (10).png 13"
13/texture = ExtResource( 59 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 0, 0, 128, 128 )
13/tile_mode = 0
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/shape_offset = Vector2( 0, 0 )
13/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
13/shape_one_way = false
13/shape_one_way_margin = 0.0
13/shapes = [  ]
13/z_index = 0
14/name = "Tile (11).png 14"
14/texture = ExtResource( 58 )
14/tex_offset = Vector2( 0, 0 )
14/modulate = Color( 1, 1, 1, 1 )
14/region = Rect2( 0, 0, 128, 128 )
14/tile_mode = 0
14/occluder_offset = Vector2( 0, 0 )
14/navigation_offset = Vector2( 0, 0 )
14/shape_offset = Vector2( 0, 0 )
14/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
14/shape = SubResource( 3 )
14/shape_one_way = false
14/shape_one_way_margin = 1.0
14/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
14/z_index = 0
15/name = "Tile (12).png 15"
15/texture = ExtResource( 57 )
15/tex_offset = Vector2( 0, 0 )
15/modulate = Color( 1, 1, 1, 1 )
15/region = Rect2( 0, 0, 128, 128 )
15/tile_mode = 0
15/occluder_offset = Vector2( 0, 0 )
15/navigation_offset = Vector2( 0, 0 )
15/shape_offset = Vector2( 0, 0 )
15/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
15/shape_one_way = false
15/shape_one_way_margin = 0.0
15/shapes = [  ]
15/z_index = 0
16/name = "Tile (13).png 16"
16/texture = ExtResource( 67 )
16/tex_offset = Vector2( 0, 0 )
16/modulate = Color( 1, 1, 1, 1 )
16/region = Rect2( 0, 0, 128, 128 )
16/tile_mode = 0
16/occluder_offset = Vector2( 0, 0 )
16/navigation_offset = Vector2( 0, 0 )
16/shape_offset = Vector2( 0, 0 )
16/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
16/shape_one_way = false
16/shape_one_way_margin = 0.0
16/shapes = [  ]
16/z_index = 0
17/name = "Tile (15).png 17"
17/texture = ExtResource( 61 )
17/tex_offset = Vector2( 0, 0 )
17/modulate = Color( 1, 1, 1, 1 )
17/region = Rect2( 0, 0, 128, 96 )
17/tile_mode = 0
17/occluder_offset = Vector2( 0, 0 )
17/navigation_offset = Vector2( 0, 0 )
17/shape_offset = Vector2( 0, 0 )
17/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
17/shape = SubResource( 4 )
17/shape_one_way = false
17/shape_one_way_margin = 1.0
17/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
17/z_index = 0
18/name = "Tile (16).png 18"
18/texture = ExtResource( 52 )
18/tex_offset = Vector2( 0, 0 )
18/modulate = Color( 1, 1, 1, 1 )
18/region = Rect2( 0, 0, 128, 96 )
18/tile_mode = 0
18/occluder_offset = Vector2( 0, 0 )
18/navigation_offset = Vector2( 0, 0 )
18/shape_offset = Vector2( 0, 0 )
18/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
18/shape = SubResource( 5 )
18/shape_one_way = false
18/shape_one_way_margin = 1.0
18/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
18/z_index = 0

[sub_resource type="Animation" id=13]
resource_name = "plataforma1"
length = 2.0
loop = true

[sub_resource type="DynamicFont" id=10]
size = 30
font_data = ExtResource( 72 )

[sub_resource type="DynamicFont" id=11]
size = 30
font_data = ExtResource( 72 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 5317.92, 83.5006 )

[node name="Game" type="Node2D"]
script = ExtResource( 3 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.2, 1 )

[node name="BG" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 853.468, 93.5303 )
scale = Vector2( 2.27558, 1.80014 )
texture = ExtResource( 64 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( -2.73145, -337.589 )
tile_set = SubResource( 9 )
cell_size = Vector2( 128, 128 )
format = 1
tile_data = PoolIntArray( 131121, 2, 0, 131122, 17, 0, 131123, 17, 0, 131124, 18, 0, 196653, 2, 0, 196654, 17, 0, 196655, 18, 0, 262174, 2, 0, 262175, 17, 0, 262176, 17, 0, 262177, 17, 0, 262178, 17, 0, 262179, 18, 0, 262181, 9, 0, 262182, 1, 0, 262183, 1, 0, 262184, 1, 0, 262185, 1, 0, 262186, 1, 0, 262187, 5, 0, 327706, 2, 0, 327707, 17, 0, 327708, 18, 0, 327717, 6, 0, 327718, 7, 0, 327719, 7, 0, 327720, 7, 0, 327721, 7, 0, 327722, 7, 0, 327723, 8, 0, 393216, 9, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 5, 0, 393230, 9, 0, 393231, 1, 0, 393232, 1, 0, 393233, 1, 0, 393234, 1, 0, 393235, 1, 0, 393236, 5, 0, 393238, 2, 0, 393239, 17, 0, 393240, 18, 0, 393253, 6, 0, 393254, 7, 0, 393255, 7, 0, 393256, 7, 0, 393257, 7, 0, 393258, 7, 0, 393259, 8, 0, 458752, 6, 0, 458753, 7, 0, 458754, 7, 0, 458755, 7, 0, 458756, 7, 0, 458757, 7, 0, 458758, 7, 0, 458759, 8, 0, 458762, 9, 0, 458763, 1, 0, 458764, 1, 0, 458765, 10, 0, 458766, 11, 0, 458767, 7, 0, 458768, 7, 0, 458769, 7, 0, 458770, 7, 0, 458771, 7, 0, 458772, 8, 0, 458789, 6, 0, 458790, 7, 0, 458791, 7, 0, 458792, 7, 0, 458793, 7, 0, 458794, 7, 0, 458795, 8, 0, 524288, 6, 0, 524289, 7, 0, 524290, 7, 0, 524291, 7, 0, 524292, 7, 0, 524293, 7, 0, 524294, 7, 0, 524295, 8, 0, 524298, 6, 0, 524299, 7, 0, 524300, 7, 0, 524301, 7, 0, 524302, 7, 0, 524303, 7, 0, 524304, 7, 0, 524305, 7, 0, 524306, 7, 0, 524307, 7, 0, 524308, 8, 0, 524325, 15, 0, 524326, 12, 0, 524327, 12, 0, 524328, 12, 0, 524329, 12, 0, 524330, 12, 0, 524331, 16, 0, 589824, 15, 0, 589825, 12, 0, 589826, 12, 0, 589827, 12, 0, 589828, 12, 0, 589829, 12, 0, 589830, 12, 0, 589831, 16, 0, 589834, 15, 0, 589835, 12, 0, 589836, 12, 0, 589837, 12, 0, 589838, 12, 0, 589839, 12, 0, 589840, 12, 0, 589841, 12, 0, 589842, 12, 0, 589843, 12, 0, 589844, 16, 0 )

[node name="plataformas" type="Node" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="plataformas"]
autoplay = "plataforma1"
anims/plataforma1 = SubResource( 13 )

[node name="Bone (1)" type="Sprite" parent="."]
position = Vector2( 54.423, 428.135 )
scale = Vector2( 0.584379, 0.541873 )
texture = ExtResource( 63 )

[node name="Bone (4)" type="Sprite" parent="."]
position = Vector2( 546.5, 440 )
scale = Vector2( 0.804134, 0.554071 )
texture = ExtResource( 60 )

[node name="ArrowSign" type="Sprite" parent="."]
position = Vector2( 988, 387.5 )
scale = Vector2( 1.01344, 1.14028 )
texture = ExtResource( 66 )

[node name="Bush (1)" type="Sprite" parent="."]
position = Vector2( 1505.92, 508.642 )
scale = Vector2( 1.01344, 1.14028 )
texture = ExtResource( 56 )

[node name="Bush (2)" type="Sprite" parent="."]
position = Vector2( 944.111, 421.719 )
scale = Vector2( 0.596506, 0.515102 )
texture = ExtResource( 62 )

[node name="Bush (3)" type="Sprite" parent="."]
position = Vector2( 991.604, 422.608 )
scale = Vector2( 0.596506, 0.515102 )
texture = ExtResource( 62 )

[node name="Crate" type="Sprite" parent="."]
position = Vector2( 253.624, 394.845 )
scale = Vector2( 1.0509, 0.790774 )
texture = ExtResource( 8 )

[node name="DeadBush" type="Sprite" parent="."]
position = Vector2( 2997.08, 407.762 )
scale = Vector2( 1.0509, 0.790774 )
texture = ExtResource( 9 )

[node name="Bush (1)2" type="Sprite" parent="."]
position = Vector2( 1597.05, 525.404 )
scale = Vector2( 1.0509, 0.790774 )
texture = ExtResource( 56 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 615.891, 325.019 )

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( 0, 1.12247 )
current = true
zoom = Vector2( 2, 2 )
limit_left = 0
limit_bottom = 965
smoothing_enabled = true

[node name="Collectables" type="Node" parent="."]

[node name="life" type="Node" parent="Collectables"]

[node name="Heart" parent="Collectables/life" instance=ExtResource( 70 )]
position = Vector2( 3005.21, 287.878 )
scale = Vector2( 0.3, 0.3 )

[node name="Heart2" parent="Collectables/life" instance=ExtResource( 70 )]
position = Vector2( 4242.46, 29.9619 )
scale = Vector2( 0.3, 0.3 )

[node name="damage" type="Node" parent="Collectables"]

[node name="points" type="Node" parent="Collectables"]

[node name="Coin" parent="Collectables/points" instance=ExtResource( 69 )]
position = Vector2( 2391.19, 116.995 )
scale = Vector2( 0.7, 0.7 )

[node name="Coin3" parent="Collectables/points" instance=ExtResource( 69 )]
position = Vector2( 3829.34, -125.363 )
scale = Vector2( 0.7, 0.7 )

[node name="Coin2" parent="Collectables/points" instance=ExtResource( 69 )]
position = Vector2( 5335.82, -83.5581 )
scale = Vector2( 0.7, 0.7 )

[node name="Coin4" parent="Collectables/points" instance=ExtResource( 69 )]
position = Vector2( 6528.42, -417.077 )
scale = Vector2( 0.7, 0.7 )

[node name="Coin5" parent="Collectables/points" instance=ExtResource( 69 )]
position = Vector2( 855.731, 189.561 )
scale = Vector2( 0.7, 0.7 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="score" type="Label" parent="HUD"]
anchor_left = 0.099
anchor_top = 0.061
anchor_right = 0.187
anchor_bottom = 0.111
margin_left = 1.0386
margin_top = 0.127903
margin_right = 0.926605
margin_bottom = 0.127907
custom_fonts/font = SubResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="single_coin" type="Sprite" parent="HUD/score"]
position = Vector2( -47.0118, 11.547 )
scale = Vector2( 0.32239, 0.280515 )
texture = ExtResource( 71 )

[node name="life" type="Label" parent="HUD"]
anchor_left = 0.098
anchor_top = 0.167
anchor_right = 0.186
anchor_bottom = 0.217
margin_left = 0.128159
margin_top = -0.160332
margin_right = 0.0161591
margin_bottom = -0.160339
custom_fonts/font = SubResource( 11 )
custom_constants/shadow_offset_x = 10
custom_constants/shadow_offset_y = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="single_heart" type="Sprite" parent="HUD/life"]
position = Vector2( -42.1761, 14.9086 )
scale = Vector2( 0.117761, 0.10785 )
texture = ExtResource( 73 )

[node name="FemaleZombie" parent="." instance=ExtResource( 2 )]
position = Vector2( 2062.45, 332.716 )

[node name="FemaleZombie2" parent="." instance=ExtResource( 2 )]
position = Vector2( 5032.16, 83.7878 )

[node name="FemaleZombie3" parent="." instance=ExtResource( 2 )]
position = Vector2( 3529.74, 199.288 )

[node name="Fallzone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fallzone"]
position = Vector2( 3900.27, 1033.06 )
shape = SubResource( 12 )

[node name="CoinSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="HeartSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="HurtSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="HurtZombieSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="blood" type="Sprite" parent="."]
position = Vector2( 253.016, 392.815 )
scale = Vector2( 0.167101, 0.179858 )
texture = ExtResource( 10 )

[node name="TombStone (1)" type="Sprite" parent="."]
position = Vector2( 4402.36, 122.023 )
scale = Vector2( 2.20578, 2.15142 )
texture = ExtResource( 13 )

[node name="Crate2" type="Sprite" parent="."]
position = Vector2( 153.837, 405.321 )
scale = Vector2( 0.838663, 0.601813 )
texture = ExtResource( 8 )

[node name="Skeleton" type="Sprite" parent="."]
position = Vector2( 5450.41, 133.997 )
scale = Vector2( 1.71183, 1.67749 )
texture = ExtResource( 12 )

[node name="TombStone (2)" type="Sprite" parent="."]
position = Vector2( 6660.32, -133.24 )
scale = Vector2( 1.83731, 1.49304 )
texture = ExtResource( 11 )

[node name="Bone (2)" type="Sprite" parent="."]
position = Vector2( 4328.95, 166.427 )
scale = Vector2( 0.940682, 0.920934 )
texture = ExtResource( 14 )

[node name="Bone (2)" type="Sprite" parent="Bone (2)"]
position = Vector2( 41.7388, 8.56494 )
rotation = -0.767945
texture = ExtResource( 14 )

[node name="BackgroundSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = -29.274

[connection signal="body_entered" from="Fallzone" to="." method="_on_Fallzone_body_entered"]
